# stockripper

./: .env.example  .gitignore  LICENSE  PROJECT_SPEC.md  README.md  alembic.ini  armtemplate.json  containerTemplate.json  debug.ipynb  debug.py  deploy-azure.ps1  deployAzure.ps1  dns.ps1  docker-compose.yml  dockerfile  publishDocker.ps1  pyproject.toml  requirements.txt  run_locally.ps1  searchTemplate.json  set_env_vars.ps1  stocks.py  testchat.py
.github/: copilot-instructions.md
.github/agents/: code-reviewer.agent.md  implementer.agent.md  investigator.agent.md  planner.agent.md  security-auditor.agent.md  ui-reviewer.agent.md
.github/hooks/: copilot-policy.json
.github/hooks/scripts/: post-build-check.ps1  pre-tool-policy.ps1
.github/instructions/: architecture.instructions.md  copilot-customization.instructions.md  data-contract.instructions.md  integrations.instructions.md  performance.instructions.md  python.instructions.md  security.instructions.md  ui-ux.instructions.md
.github/prompts/: alpaca-integration.prompt.md  debug-investigation.prompt.md  feature-implementation.prompt.md  langgraph-change.prompt.md
.github/skills/alpaca-integration/: SKILL.md
.github/skills/alpaca-mcp/: SKILL.md
.github/skills/audit-logging/: SKILL.md
.github/skills/code-testing/: SKILL.md
.github/skills/dashboard-ui/: SKILL.md
.github/skills/determinism-and-replay/: SKILL.md
.github/skills/evidence-parsing/: SKILL.md
.github/skills/generated-artifacts/: SKILL.md
.github/skills/keyboard-first-ui/: SKILL.md
.github/skills/langgraph-workflow/: SKILL.md
.github/skills/performance-observability/: SKILL.md
.github/skills/python-api-and-idioms/: SKILL.md
.github/skills/python-linting/: SKILL.md
.github/skills/python-project-layout/: SKILL.md
.github/skills/python-scripts/: SKILL.md
.github/skills/run-tests/: SKILL.md
.github/skills/schema-contracts/: SKILL.md
.github/workflows/: copilot-setup-steps.yml  full-stack-quality.yml  paper-trading-safety.yml  python-quality.yml  python-smoke.yml
config/: acrTemplate.json  containerTemplate.json  storageAccountTemplate.json
deployment/: _remaining.ps1  buildContainers.ps1  deleteAzureResources.ps1  deleteContainerInstance.ps1  deployAzure.ps1  deployContainerRegistry.ps1  deployFromScratch.ps1  publishDocker.ps1  runDockerLocally.ps1  setSubscription.ps1  streamContainerLogs.ps1
deployment/kubernetes/: config.yaml  doKubernetes.ps1  installJupyterHub.ps1
deployment/steps/: buildContainers.ps1  createPublicIP.ps1  createResourceGroup.ps1  createStorageAccount.ps1  createUAMI.ps1  createVnet.ps1  deployApplicationGateway.ps1  deployCognitiveSearch.ps1  deployContainerInstances.ps1  deployContainerRegistry.ps1  grantStorageRBAC.ps1  pushContainerImages.ps1  restartContainerGroup.ps1  setSubscription.ps1
docker/: docker-compose.yml
docs/: architecture-report.html
documents/: Chartered Financial Analyst.txt  Enron.txt  Investment strategy.txt  Investor.txt  Jeffrey Skilling.txt  Private equity.txt  Real estate investing.txt  Security Analysis (book).txt  Security analysis.txt  Trading strategy.txt  Value investing.txt
scripts/: saveKustoTokensToVault.ps1
src/agent-app/: Dockerfile  app copy.py  app.py  app_experimental.py  debug.py  get_mail_token.py  ingest_documents.py  map_with_points.html  memory.ipynb  minimal.py  playwright.ipynb  playwright_test.py  requirements.txt  scratch.ipynb  skilltest.ipynb  skilltest.py  storagedebug.py
src/chat-interface/: Dockerfile  app.py  nginx.conf  requirements.txt  supervisord.conf
src/doc-converter/: debug.ipynb  pdf-to-text.py  requirements.txt
src/fsharp-app/: Dockerfile  Program.fs  Utils.fs  fsharp-app.fsproj
src/rust-app/: Cargo.toml  Dockerfile
src/rust-app/src/: main.rs
src/stockripper/: __init__.py  __main__.py  config.py
tests/: conftest.py  fixtures_agents.py  test_agent_orchestrator.py  test_agent_prompts.py  test_agent_safety.py  test_agent_schemas.py  test_agents_endtoend.py  test_alpaca_mcp_client.py  test_cli.py  test_client_order_id.py  test_config.py  test_dashboard_app.py  test_dashboard_events.py  test_data_cache.py  test_data_fundamentals.py  test_data_market_data.py  test_data_news.py  test_data_provenance.py  test_data_sec_edgar.py  test_data_universe.py  test_data_universe_policy.py  test_db_repository.py  test_db_repository_phase6.py  test_execution_adapter.py  test_ids.py  test_no_order_surface.py  test_persistence.py  test_reconciliation.py  test_repository_phase4.py  test_risk_floors.py  test_risk_gate.py  test_scoring_leaderboard.py  test_scoring_regret.py  test_scoring_reward.py  test_window_runner.py  test_window_runner_events.py  test_window_runner_universe.py
tools/alpaca_mcp/: README.md  pyproject.toml
tools/alpaca_mcp/src/alpaca_mcp/: __init__.py  __main__.py  _serde.py  clients.py  config.py  server.py
tools/alpaca_mcp/tests/: conftest.py  test_config.py  test_server.py
(+94 files in other folders)
