[project]
name = "stockripper"
version = "0.0.1"
description = "Multi-agent paper-trading research laboratory (autonomous, Alpaca paper-only)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Randy Treit" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "openai>=1.55",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "python-dateutil>=2.9",
    "mcp>=1.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "alpaca-py>=0.30",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "websockets>=16.0",
    "httpx-sse>=0.4.3",
]

[project.optional-dependencies]
# Kept for backward-compat with earlier docs; Postgres is now a core dep.
postgres = [
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
]

[project.scripts]
stockripper = "stockripper.__main__:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-python-dateutil>=2.9",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stockripper"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle + pyflakes
    "I",            # isort
    "N",            # pep8-naming
    "UP",           # pyupgrade
    "B",            # bugbear
    "SIM",          # simplify
    "RUF",          # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
files = ["src/stockripper", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["mcp.*", "alpaca.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: marks tests that require live external services (deselect with -m 'not live')",
]

[tool.coverage.run]
source = ["src/stockripper"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
