[package]
name = "health_check"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "health_check"
path = "src/main.rs"
