[project]
name = "stockripper-alpaca-mcp"
version = "0.1.0"
description = "MCP server exposing Alpaca trading + market data APIs (paper or live)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2",
    "alpaca-py>=0.36",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "python-dateutil>=2.9",
]

[project.scripts]
alpaca-mcp = "alpaca_mcp.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-python-dateutil>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alpaca_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
files = ["src/alpaca_mcp", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["alpaca.*", "mcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Boundary module: alpaca-py SDK methods are typed as returning Any/Union,
# so warn_return_any and union-attr produce noise without surfacing real bugs.
module = "alpaca_mcp.server"
warn_return_any = false
disable_error_code = ["union-attr"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: marks tests that hit real Alpaca endpoints (deselect with -m 'not live')",
]
